# iKho

./: .gitignore
.github/instructions/: bazel.instructions.md  csharp.instructions.md  go.instructions.md  nx.instructions.md  reactjs.instructions.md
doc/: FE-brief.md  system-prompt.txt
example/: .bazelrc  BUILD.bazel  Directory.Build.props  Directory.Packages.props  MODULE.bazel  README.md  iKho.sln
example/apps/schema-management/: BUILD.bazel  Program.cs  README.md  schema-management.csproj
example/apps/schema-management/Commands/: GenerateCommand.cs  ListCommand.cs  PullCommand.cs  RegisterCommand.cs  ValidateCommand.cs
example/apps/schema-management/Models/: SchemaMetadata.cs
example/apps/schema-management/Schemas/: order-event.schema.json  payment-processed.schema.json  user-activity.schema.json
example/apps/schema-management/Services/: JsonSchemaCodeGenerator.cs  KafkaSchemaRegistryService.cs  SchemaFileManager.cs
example/apps/task-api/: BUILD.bazel  go.mod  main.go
example/apps/user-api/: BUILD.bazel  Program.cs  user-api.csproj
example/apps/web-app/: BUILD.bazel  index.html  package-lock.json  package.json  vite.config.ts
example/apps/web-app/src/: App.tsx  index.css
source/: .bazelignore  .bazelrc  MODULE.bazel  README.md  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
source/apps/admin-fe/: .cta.json  BUILD.bazel  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
source/apps/admin-fe/public/locales/en/: translation.json
source/apps/admin-fe/src/: i18n.ts  styles.css
source/apps/admin-fe/src/features/categories/: index.ts  mockData.ts
source/apps/admin-fe/src/features/categories/components/: CategoryList.tsx
source/apps/admin-fe/src/features/dashboard/: index.ts
source/apps/admin-fe/src/features/products/: index.ts  mockData.ts
source/apps/admin-fe/src/features/products/components/: ProductList.tsx
source/apps/admin-fe/src/features/reorder/: index.ts
source/apps/admin-fe/src/features/reorder/components/: ReorderList.tsx
source/apps/admin-fe/src/features/variants/: index.ts
source/apps/admin-fe/src/features/variants/components/: VariantList.tsx
source/apps/admin-fe/src/routes/: categories.tsx  index.tsx  stock-adjustment.tsx  variants.tsx
source/apps/admin-fe/src/shared/components/: select.tsx
source/apps/admin-fe/src/shared/layouts/: Header.tsx  LanguageToggle.tsx
source/apps/db-setup/: .gitignore  README.md  go.mod  go.sum  main.go  package.json  query.sql  schema.sql
source/apps/db-setup/cmd/: config.go  dump.go  generate.go  migrate.go  root.go
source/apps/db-setup/internal/splitter/: splitter.go
source/apps/db-setup/migrations/: 000000_create_categories.up.sql  000001_create_categories.up.sql  000002_create_products.up.sql
source/apps/fe/: README.md  TECH_STACK.md
source/apps/fe/public/locales/en/: translation.json
source/apps/fe/public/locales/vi/: translation.json
source/apps/fe/src/: i18n.ts  routeTree.gen.ts
source/apps/fe/src/components/: DashboardLayout.tsx  Footer.tsx  Header.tsx  LanguageToggle.tsx  Sidebar.tsx  ThemeProvider.tsx
source/apps/fe/src/components/ui/: dialog.tsx
source/apps/fe/src/components/views/: BundleViews.tsx  CategoryViews.tsx  InventoryViews.tsx  ReorderViews.tsx  StockAdjustmentViews.tsx  VariantViews.tsx  index.ts
source/apps/fe/src/components/views/products/: ProductFilters.tsx  ProductHeader.tsx  ProductList.tsx  ProductTable.tsx  index.ts  types.ts
source/apps/fe/src/core/: index.ts  types.ts
source/apps/fe/src/features/: index.ts
source/apps/fe/src/features/bundles/: index.ts
source/apps/fe/src/features/bundles/components/: BundleList.tsx
source/apps/fe/src/features/categories/: store.ts  types.ts
source/apps/fe/src/features/categories/components/: CategoryDialog.tsx  CategoryTable.tsx
source/apps/fe/src/features/dashboard/components/: DashboardView.tsx
source/apps/fe/src/features/products/: store.ts
source/apps/fe/src/features/products/components/: ProductFilters.tsx  ProductHeader.tsx  ProductTable.tsx
source/apps/fe/src/features/stock-adjustment/: index.ts
source/apps/fe/src/features/stock-adjustment/components/: StockAdjustmentList.tsx
source/apps/fe/src/routes/: __root.tsx  bundles.tsx  index.tsx  products.tsx  reorder.tsx
source/apps/fe/src/services/: api.ts  index.ts
source/apps/fe/src/shared/: index.ts
source/apps/fe/src/shared/components/: index.ts
source/apps/fe/src/shared/layouts/: DashboardLayout.tsx  Footer.tsx  Sidebar.tsx  index.ts
source/apps/fe/src/store/: useStore.ts
source/apps/product-catalog/: README.md  go.mod  package.json
source/apps/product-catalog/cmd/server/: main.go
source/apps/product-catalog/internal/domain/: product.go
source/apps/product-catalog/internal/features/categories/: handler.go  memory_repository.go  models.go  repository.go  service.go
source/apps/product-catalog/internal/features/products/: handler.go  memory_repository.go  models.go  products_test.go  repository.go  service.go  validation.go
source/apps/product-catalog/internal/shared/: response.go
