module(
    name = "ikho_monorepo",
    version = "1.0.0",
)

# ============================================================================
# Go Rules
# ============================================================================
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

# ============================================================================
# JavaScript / TypeScript Rules
# ============================================================================
bazel_dep(name = "rules_js", version = "2.1.0")
bazel_dep(name = "rules_ts", version = "3.2.1")
bazel_dep(name = "aspect_rules_js", version = "2.1.0")

# ============================================================================
# .NET Rules
# ============================================================================
bazel_dep(name = "rules_dotnet", version = "0.16.1")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "10.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")
