load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "task-api_lib",
    srcs = ["main.go"],
    importpath = "task-api",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_mux//:mux"],
)

go_binary(
    name = "task-api",
    embed = [":task-api_lib"],
    visibility = ["//visibility:public"],
)
