load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "web-app_ts",
    srcs = glob(["src/**/*.tsx", "src/**/*.ts"]),
    declaration = True,
    tsconfig = "tsconfig.json",
    visibility = ["//visibility:public"],
)

js_library(
    name = "web-app",
    srcs = [
        "index.html",
        "package.json",
        "vite.config.ts",
    ] + glob(["src/**/*.css"]),
    visibility = ["//visibility:public"],
    deps = [":web-app_ts"],
)
