load("@aspect_rules_js//js:defs.bzl", "js_library", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//apps/admin-fe:vite/package_json.bzl", vite_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

# Source files
filegroup(
    name = "src",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "src/**/*.css",
    ]),
)

# Static assets
filegroup(
    name = "public",
    srcs = glob(["public/**/*"]),
)

# Config files
filegroup(
    name = "config",
    srcs = [
        "package.json",
        "tsconfig.json",
        "vite.config.ts",
        "components.json",
    ],
)

# JS library
js_library(
    name = "admin-fe_lib",
    srcs = [
        ":config",
        ":public",
        ":src",
    ],
    deps = [":node_modules"],
)

# Build production bundle
vite_bin.vite(
    name = "build",
    srcs = [":admin-fe_lib"],
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
)

# Development server
vite_bin.vite_binary(
    name = "dev",
    args = [
        "dev",
        "--port",
        "3000",
    ],
    chdir = package_name(),
    data = [":admin-fe_lib"],
)
